resources/discovery.yaml
apiVersion: v1
kind: Pod
metadata:
  name: discoveryserver
  namespace: magnum-etcd
  labels:
    app: discovery
spec:
  containers:
    - name: discoveryserver
      image: 172.22.13.9:5000/discoveryserver:0520_local
      ports:
        - name: discovery
          containerPort: 8087
          protocol: TCP
