resources/discovery_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: discovery
  name: discovery-service
  namespace: magnum-etcd
spec:
  externalIPs:
  - {externalIPs}
  ports:
  - name: discovery-service-8087
    port: 8087
    protocol: TCP
    targetPort: 8087
  selector:
    app: discovery
  sessionAffinity: None
  type: LoadBalancer
