resources/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: magnum-etcd
  name: magnum-etcd-networkpolicy
spec:
  podSelector:
    matchLabels:
  egress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
  - to:
    - podSelector: {}
  ingress:
  - from:
    - podSelector: {}
    - ipBlock:
        cidr: 10.244.0.0/16
    - ipBlock:
        cidr: 10.96.0.0/12
  policyTypes:
  - Ingress
  - Egress
